# Particleflow

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONFIG.md  MAKE_VS_CMAKE.md  PYTHIA.md  README.md  cleanerBuild.sh  run.sh  run_ui.sh  scan.py  scanPlot.py
cmndPythia/: test.cmnd
config/cmndPythia/: test.cmnd
config/macrosG4/: zzlib.mac  zzlib_valid.mac
config/runs/: first.toml  full-example.toml  g4.toml  pythia.toml
config/runs/geometry_scan/: ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p01m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p03m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p05m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p07m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p09m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p11m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p13m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p15m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p17m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p19m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p21m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p23m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p25m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p27m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p29m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p31m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p33m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p35m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p37m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p39m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p41m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p43m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p45m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p47m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p49m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p51m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p53m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p55m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p57m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p59m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p61m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p63m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p65m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p67m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p69m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p71m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p73m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p75m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p77m.toml  ev1000_concreteHalfX_0p15m_frontPbHalfZ_0p79m.toml  (+1734 more)
include/: ActionInitialization.hh  Collider.hh  DetectorConstruction.hh  DetectorSD.hh  G4Simulator.hh  GasSD.hh  Messages.hh  PrimaryGeneratorAction.hh  StackingAction.hh
include/config/: ConfigParser.hh
include/geant4/: ActionInitialization.hh  DetectorConstruction.hh  G4Simulator.hh  PrimaryGeneratorAction.hh  StackingAction.hh
include/geant4/detectorSDs/: AllDetectorSD.hh  BaseSD.hh  GenericSD.hh  KillBoxSD.hh  RPCSD.hh  ScintillatorSD.hh
include/geant4/geometries/: AllGeometries.hh  GeometryRealistic.hh  GeometryRealisticMap.hh  GeometryScene.hh  GeometrySimpleWall.hh  GeometryTypes.hh
include/generators/: Generators.hh
macros/: init.mac  run.mac  vis.mac
macrosG4/: export.mac  exportGeom.mac  vis.mac  vis2.mac
resultss/: ALOHA.hepmc  Callate2.0_KillBox_MX.hepmc  Callate2.0_RPC.hepmc  Callate2.0_ScintDet.hepmc
src/: ActionInitialization.cc  Collider.cc  DetectorConstruction.cc  GasSD.cc  Messages.cc  PrimaryGeneratorAction.cc  main.cc
src/collider/: Collider.cc
src/config/: ConfigParser.cc
src/detector/: DetectorSD.cc
src/geant4/: ActionInitialization.cc  DetectorConstruction.cc  G4Simulator.cc  PrimaryGeneratorAction.cc  StackingAction.cc
src/geant4/detectorSDs/: BaseSD.cc  GenericSD.cc  KillBoxSD.cc  RPCSD.cc  ScintillatorSD.cc
src/geant4/geometries/: GeometryRealistic.cc  GeometryRealisticMap.cc  GeometryScene.cc  GeometrySimpleWall.cc
src/generators/: Generators.cc
